--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -8,6 +8,9 @@ body, html {
     width: 100%;
     height: 100%;
     font-family: 'Montserrat', sans-serif;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(218, 218, 218);
 }
 
 #navbar {
@@ -54,20 +57,6 @@ body, html {
         background-color: #FF5C5C;
         cursor: pointer;
     }
-    /* #logout-container p {
-        width: 100px;
-        height: 35px;
-        border-radius: 5px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    #logout-container p:hover {
-        color: #FF5C5C;
-        cursor: pointer;
-        background-color: rgb(235, 235, 235);
-        font-weight: bold;
-    } */
 
 main {
     padding-top: 70px;
@@ -80,7 +69,7 @@ main {
         margin-left: 30px;
         margin-top: 20px;
         text-transform: capitalize;
-        color: #919191;
+        color: #3a3a3a;
     }
     .options {
         display: flex;
@@ -99,7 +88,7 @@ main {
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: white;
+            background-color: rgb(100, 100, 100);
             border-radius: 10px;
             color: #525252;
             flex: content;
@@ -107,27 +96,6 @@ main {
             margin-left: 30px;
             border: none;
             color: white;
-        }
-        #ventaButton {
-            background-color: #e74c3c;
-        }
-        #contactoButton {
-            background-color: #27ae60;
-        }
-        #comisionesButton {
-            background-color: #f1c40f;
-        }
-        #ventasButton {
-            background-color: #f39c12;
-        }
-        #clientesButton {
-            background-color: #16a085;
-        }
-        #vendedoresButton {
-            background-color: #9b59b6;
-        }
-        #productosButton {
-            background-color: #34495e;
         }
 
         .option:hover {
