--- a/templates/menuEmpleado.html
+++ b/templates/menuEmpleado.html
@@ -20,6 +20,7 @@
             <a href="/logout" id="logoutButton">Cerrar sesión</a>
         </div>
     </nav>
+    {% include 'sidebar.html' %}
     <main>
         <h2 id="welcome">Bienvenido {{ User }}!</h2>
         <div class="options">
