--- a/static/css/sidebarBlock.css
+++ b/static/css/sidebarBlock.css
@@ -1,24 +1,20 @@
-#logo {
-    width: 50px;
-    margin: 10px 40px;
-}
-
 #sidebar {
     width: 250px;
+    height: 100%;
     min-width: 250px;
     display: flex;
     flex-direction: column;
     position: relative;
-    margin-top: 70px;
     box-sizing: border-box;
     background-color: white;
 }
 
 h3 {
-    color: #0A3D62;
+    color: rgb(49,46,129);
     box-sizing: border-box;
     margin-top: 10px;
     padding: 10px 20px;
+    font-weight: bolder;
 }
 
 .navOption {
@@ -31,12 +27,11 @@ h3 {
     align-items: center;
 }
 
-    .navOption a {
+    .navOption p {
         text-decoration: none;
         padding-left: 20px;
         position: absolute;
         color: rgb(90, 90, 90);
-        transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
     }
     .navOption::before {
         content: '';
@@ -46,8 +41,8 @@ h3 {
         left: 0;
         width: 0;
         height: 40px;
-        background-color: #a1a1a1;
-        transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+        background-color: rgb(49,46,129);
+        transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
     }
     .navOption:hover::before {
         width: 100%;
@@ -55,6 +50,6 @@ h3 {
     .navOption:hover {
         cursor: pointer;
     }
-    .navOption:hover a {
+    .navOption:hover p {
         color: white;
     }
