--- a/templates/menu.html
+++ b/templates/menu.html
@@ -35,7 +35,7 @@
                 <a href="#" class="bg-pink-600 text-white rounded-md p-6 flex justify-center hover:bg-pink-500 cursor-pointer w-72" id="clientesButton">
                     Clientes
                 </a>
-                <a href="#" class="bg-purple-600 text-white rounded-md p-6 flex justify-center hover:bg-purple-500 cursor-pointer w-72" id="vendedoresButton">
+                <a href="vendedores" class="bg-purple-600 text-white rounded-md p-6 flex justify-center hover:bg-purple-500 cursor-pointer w-72" id="vendedoresButton">
                     Vendedores
                 </a>
                 <a href="productos" class="bg-blue-600 text-white rounded-md p-6 flex justify-center hover:bg-blue-500 cursor-pointer w-72" id="productosButton">
