--- a/templates/vendedores.html
+++ b/templates/vendedores.html
@@ -13,7 +13,7 @@
         {% include "sidebar.html" with tipo=User.tipo %}
         <div class="w-full pt-8 flex justify-center">
             <div class="flex flex-col w-11/12 items-center">
-                <table class="table-auto bg-white w-full">
+                <table class="table-auto bg-white w-full overflow-y-auto">
                     <tr class="bg-indigo-900 text-white rounded-md py-2">
                         <th class="py-3 text-lg">Usuario</th>
                         <th class="py-3 text-lg">Nombre</th>
@@ -33,12 +33,13 @@
                                 <td class="py-2"> Inactivo </td>
                             {% endif %}
                             <td class="py-2"> {{ i.telefono }} </td>
-                            <td class="py-2">
+                            <td class="py-2 flex flex-row justify-center">
                                 <form method="POST">
                                     {% csrf_token %}
                                     <input type="hidden" value="{{ i.pk }}" name="pk">
                                     <input type="submit" value="Eliminar" class="bg-red-500 hover:bg-red-400 cursor-pointer rounded-md text-white py-1 px-4">
                                 </form>
+                                <a href="editarVendedor/{{i.pk}}" class="bg-yellow-500 hover:bg-yellow-400 cursor-pointer rounded-md text-white py-1 px-4 ml-2">Editar</a>
                             </td>
                         </tr>
                     {% endfor %}
