feat: Pantalla de ventas y registro de venta

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -10,7 +10,7 @@
         <h3 class="font-bold">
             Opciones
         </h3>
-        <a href="#" class="navOption">
+        <a href="/ventas/registrarVenta" class="navOption">
             <p>Registro de venta</p>
         </a>
         <a href="#" class="navOption">
