--- a/templates/menu.html
+++ b/templates/menu.html
@@ -20,7 +20,7 @@
         <main class="p-6 w-full">
             <h2 class="text-2xl text-gray-500 font-bold">Bienvenido {{ User }}!</h2>
             <div class="mt-4 flex flex-wrap gap-4 w-full">
-                <a href="#" class="bg-indigo-900 text-white rounded-md p-6 flex justify-center hover:bg-indigo-700 cursor-pointer w-72" id="ventaButton">
+                <a href="/ventas/registrarVenta" class="bg-indigo-900 text-white rounded-md p-6 flex justify-center hover:bg-indigo-700 cursor-pointer w-72" id="ventaButton">
                     Registro de venta
                 </a>
                 <a href="#" class="bg-yellow-600 text-white rounded-md p-6 flex justify-center hover:bg-yellow-500 cursor-pointer w-72" id="contactoButton">
