--- a/templates/menu.html
+++ b/templates/menu.html
@@ -26,24 +26,27 @@
                 <a href="/prospectos" class="bg-yellow-600 text-white rounded-md p-6 flex justify-center hover:bg-yellow-500 cursor-pointer w-72" id="contactoButton">
                     Solicitudes de contacto
                 </a>
-                <a href="#" class="bg-green-600 text-white rounded-md p-6 flex justify-center hover:bg-green-500 cursor-pointer w-72" id="comisionesButton">
-                    Comisiones
-                </a>
-                <a href="/ventas" class="bg-red-600 text-white rounded-md p-6 flex justify-center hover:bg-red-500 cursor-pointer w-72" id="ventasButton">
-                    Ventas
-                </a>
-                <a href="/clientes" class="bg-pink-600 text-white rounded-md p-6 flex justify-center hover:bg-pink-500 cursor-pointer w-72" id="clientesButton">
-                    Clientes
-                </a>
-                <a href="/vendedores" class="bg-purple-600 text-white rounded-md p-6 flex justify-center hover:bg-purple-500 cursor-pointer w-72" id="vendedoresButton">
-                    Vendedores
-                </a>
-                <a href="/productos" class="bg-blue-600 text-white rounded-md p-6 flex justify-center hover:bg-blue-500 cursor-pointer w-72" id="productosButton">
-                    Productos
-                </a>
-                <a href="/sucursales" class="bg-gray-600 text-white rounded-md p-6 flex justify-center hover:bg-gray-500 cursor-pointer w-72" id="productosButton">
-                    Sucursales
-                </a>
+
+                {% if User.tipo == 'MA' %}
+                    <a href="#" class="bg-green-600 text-white rounded-md p-6 flex justify-center hover:bg-green-500 cursor-pointer w-72" id="comisionesButton">
+                        Comisiones
+                    </a>
+                    <a href="/ventas" class="bg-red-600 text-white rounded-md p-6 flex justify-center hover:bg-red-500 cursor-pointer w-72" id="ventasButton">
+                        Ventas
+                    </a>
+                    <a href="/clientes" class="bg-pink-600 text-white rounded-md p-6 flex justify-center hover:bg-pink-500 cursor-pointer w-72" id="clientesButton">
+                        Clientes
+                    </a>
+                    <a href="/vendedores" class="bg-purple-600 text-white rounded-md p-6 flex justify-center hover:bg-purple-500 cursor-pointer w-72" id="vendedoresButton">
+                        Vendedores
+                    </a>
+                    <a href="/productos" class="bg-blue-600 text-white rounded-md p-6 flex justify-center hover:bg-blue-500 cursor-pointer w-72" id="productosButton">
+                        Productos
+                    </a>
+                    <a href="/sucursales" class="bg-gray-600 text-white rounded-md p-6 flex justify-center hover:bg-gray-500 cursor-pointer w-72" id="productosButton">
+                        Sucursales
+                    </a>
+                {% endif %}
             </div>
         </main>
     </div>
