--- a/templates/vendedores.html
+++ b/templates/vendedores.html
@@ -39,12 +39,12 @@
                                     <input type="hidden" value="{{ i.pk }}" name="pk">
                                     <input type="submit" value="Eliminar" class="bg-red-500 hover:bg-red-400 cursor-pointer rounded-md text-white py-1 px-4">
                                 </form>
-                                <a href="editarVendedor/{{i.pk}}" class="bg-yellow-500 hover:bg-yellow-400 cursor-pointer rounded-md text-white py-1 px-4 ml-2">Editar</a>
+                                <a href="/vendedores/editarVendedor/{{i.pk}}" class="bg-yellow-500 hover:bg-yellow-400 cursor-pointer rounded-md text-white py-1 px-4 ml-2">Editar</a>
                             </td>
                         </tr>
                     {% endfor %}
                 </table>
-                <a href="nuevoVendedor" class="mt-4 self-end bg-green-800 text-white py-2 px-4 hover:bg-green-700">Registrar vendedor</a>
+                <a href="/vendedores/nuevoVendedor" class="mt-4 self-end bg-green-800 text-white py-2 px-4 hover:bg-green-700">Registrar vendedor</a>
             </div>
         </div>
     </div>
