feat: Gráficas de comisiones y ventas
feat: Página de inicio y de contacto al vendedor

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -17,7 +17,7 @@
             <p>Solicitudes de contacto</p>
         </a>
         {% if tipo == 'MA' %}
-            <a href="#" class="navOption">
+            <a href="/comisiones" class="navOption">
                 <p>Comisiones</p>
             </a>
             <a href="/ventas" class="navOption"> 
