--- a/templates/menu.html
+++ b/templates/menu.html
@@ -23,12 +23,12 @@
                 <a href="/ventas/registrarVenta" class="bg-indigo-900 text-white rounded-md p-6 flex justify-center hover:bg-indigo-700 cursor-pointer w-72" id="ventaButton">
                     Registro de venta
                 </a>
-                <a href="/prospectos" class="bg-yellow-600 text-white rounded-md p-6 flex justify-center hover:bg-yellow-500 cursor-pointer w-72" id="contactoButton">
+                <a href="/prospectos" class="bg-yellow-500 text-white rounded-md p-6 flex justify-center hover:bg-yellow-400 cursor-pointer w-72" id="contactoButton">
                     Solicitudes de contacto
                 </a>
 
                 {% if User.tipo == 'MA' %}
-                    <a href="#" class="bg-green-600 text-white rounded-md p-6 flex justify-center hover:bg-green-500 cursor-pointer w-72" id="comisionesButton">
+                    <a href="/comisiones" class="bg-green-600 text-white rounded-md p-6 flex justify-center hover:bg-green-500 cursor-pointer w-72" id="comisionesButton">
                         Comisiones
                     </a>
                     <a href="/ventas" class="bg-red-600 text-white rounded-md p-6 flex justify-center hover:bg-red-500 cursor-pointer w-72" id="ventasButton">
