--- a/templates/ventas.html
+++ b/templates/ventas.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
     <title>Mercedes Benz | Ventas</title>
 </head>
 <body class="m-0 p-0 h-full w-full box-border flex flex-col">
     {% include 'nav.html' %}
-    <div class="inline-flex flex-row w-full h-full bg-gray-200">
+    <div class="inline-flex flex-row w-full h-full bg-gray-200 overflow-hidden">
         {% include "sidebar.html" with tipo=User.tipo %}
-        <div class="w-full pt-8 flex justify-center">
-            <div class="flex flex-col w-11/12 items-center">
+        <div class="w-full h-full pt-8 flex flex-col items-center overflow-y-auto pb-14 box-border">
+
+            <div class="w-7/12">
+                <canvas id="ventasChart" width="600" height="400"></canvas>
+            </div>
+
+            <div class="flex flex-col w-11/12 items-center mt-8">
                 <table class="table-auto bg-white w-full overflow-y-auto">
                     <tr class="bg-indigo-900 text-white rounded-md py-2">
                         <th class="py-3 text-lg">Producto</th>
@@ -31,7 +37,7 @@
                             <td class="py-2"> {{ i.producto }} </td>
                             <td class="py-2"> {{ i.sucursal }} </td>
                             <td class="py-2"> {{ i.empleado }} </td>
-                            <td class="py-2"> {{ i.cliente }} </td>
+                            <td class="py-2"> {{ i.prospecto }} </td>
                             <td class="py-2"> {{ i.fecha_venta }} </td>
                             {% if i.tipo_venta == 'FI' %}
                                 <td class="py-2"> Financiado </td>
@@ -49,11 +55,6 @@
                             
                             {% if User.tipo == 'MA' %}
                                 <td class="py-2 flex flex-row justify-center">
-                                    <form method="POST">
-                                        {% csrf_token %}
-                                        <input type="hidden" value="{{ i.pk }}" name="pk">
-                                        <input type="submit" value="Eliminar" class="bg-red-500 hover:bg-red-400 cursor-pointer rounded-md text-white py-1 px-4">
-                                    </form>
                                     <a href="/prospectos/editarProspecto/{{i.pk}}" class="bg-yellow-500 hover:bg-yellow-400 cursor-pointer rounded-md text-white py-1 px-4 ml-2">Editar</a>
                                 </td>
                             {% endif %}
@@ -64,5 +65,46 @@
             </div>
         </div>
     </div>
+
+    <script>
+        var ctx = document.getElementById('ventasChart');
+        var empleados = '{{empleados|safe}}'
+        var totales = "{{totales|safe}}"
+        console.log(empleados)
+        console.log(totales)
+        empleados = JSON.parse(empleados)
+        totales = JSON.parse(totales)
+
+        var comisionesChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: empleados,
+                datasets: [{
+                    label: 'Ventas',
+                    data: totales,
+                    backgroundColor: [
+                        'rgba(255, 99, 132)',
+                        'rgba(54, 162, 235)',
+                        'rgba(255, 206, 86)',
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                maintainAspectRatio: false,
+                responsive: true,
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+    </script>
 </body>
 </html>
